--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -2,21 +2,27 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-sm-6">
-                <app-progresso></app-progresso>
+                <app-progresso [progresso]="progresso"></app-progresso>
             </div>
             <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
-                    <app-tentativas></app-tentativas>
+                    <app-tentativas [tentativas]="tentativas"></app-tentativas>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col">
-                <h6>Traduz a Frase:</h6>
-                <p>How are you?</p>
+                <h6>{{instrucao}}</h6>
+                <p> {{ fraseRodada.fraseEng }}</p>
                 <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
+                    <textarea 
+                        class="form-control" 
+                        rows="3"
+                        [value] = "resposta"
+                        (input) = "atualizarResposta($event)">
+                      
+                    </textarea>
                 </div>
             </div>
         </div>
@@ -24,7 +30,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary">Primary</button>
+                    <button type="button" class="btn btn-primary" (click) = "verificarResposta()"> Verificar </button>
                 </div>
             </div>
         </div>
