Create home compoment, add post

--- a/app3/src/app/acesso/cadastro/cadastro.component.html
+++ b/app3/src/app/acesso/cadastro/cadastro.component.html
@@ -4,20 +4,22 @@
 
     <form [formGroup]="formulario" (ngSubmit)="cadastrar()">
       <div class="form-group">
-        <input type="email" class="form-control" placeholder="E-mail" formControlName="email">
+        <input type="email" class="form-control" placeholder="E-mail" formControlName="email" required>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nome completo" formControlName="nome_completo">
+        <input type="text" class="form-control" placeholder="Nome completo" formControlName="nome_completo" required>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Nome de usuário" formControlName="nome_usuario">
+        <input type="text" class="form-control" placeholder="Nome de usuário" formControlName="nome_usuario" required>
       </div>
       <div class="form-group">
-        <input type="password" class="form-control" placeholder="Senha" formControlName="senha">
+        <input type="password" class="form-control" placeholder="Senha" formControlName="senha" required>
       </div>
-      <button type="submit" class="btn btn-primary btn-sm btn-block">Cadastre-se</button>
+      <button type="submit" class="btn btn-primary btn-sm btn-block" [disabled]="!formulario.valid">Cadastre-se</button>
     </form>
     <hr />
+  
+    <p *ngIf="hasError" class="small text-danger text-center">{{mensagemError}}</p>
 
     <p class="small text-center">Ao cadastrar-se, você concorda com nossos <b>Termos</b> e <b>Política de
         Privacidade</b>.</p>
