--- a/app3/src/app/acesso/login/login.component.html
+++ b/app3/src/app/acesso/login/login.component.html
@@ -2,12 +2,14 @@
   <div class="card-body">
     <div class="card-title"></div>
     
-    <!-- <form> -->
+    <form [formGroup]="formLogin" (ngSubmit)="onLogin()">
       <div class="form-group">
         <input 
           type="email" 
           class="form-control" 
           placeholder="E-mail"
+          required
+          formControlName="email"
         >
       </div>
       <div class="form-group">
@@ -15,13 +17,15 @@
           type="password"
           class="form-control" 
           placeholder="Senha"
+          required
+          formControlName="senha"
         >
       </div>
-      <button type="submit" class="btn btn-primary btn-sm btn-block">Entrar</button>
-    <!-- </form> -->
+      <button type="submit" class="btn btn-primary btn-sm btn-block" [disabled]="!formLogin.valid">Entrar</button>
+    </form>
     <hr />
 
-    <p class="small text-danger text-center">O nome de usuário inserido não pertence a uma conta. Verifique seu nome de usuário e tente novamente.</p>
+    <p *ngIf="hasError" class="small text-danger text-center">{{mensagemError}}</p>
 
   </div>
 </div>
