Finish Project and refactoring

--- a/app3/src/app/home/home.component.html
+++ b/app3/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 <br /><br /><br />
 <div class="container">
-  <app-publicacoes></app-publicacoes>
-  <app-incluir-publicacao></app-incluir-publicacao>
+  <app-publicacoes #publicacoes></app-publicacoes>
+  <app-incluir-publicacao (atualizarTimeLine)="atualizarTimeLine()" *ngIf="isAddPost"></app-incluir-publicacao>
 </div>
 
