--- a/app3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
+++ b/app3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
@@ -1,24 +1,44 @@
 <div class="modal-content">
-        <div class="modal-header">
-                <h4 class="modal-title">Criar Publicação</h4>
-                <button type="button" class="close" (click)="activeModal.dismiss('Close clicked')" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            
+    <div class="modal-header">
+        <h4 class="modal-title">Criar Publicação</h4>
+        <button type="button" class="close" (click)="activeModal.dismiss('Close clicked')" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div class="modal-body" *ngIf="progressoPublicacao === 'pendente'">
+        <form [formGroup]="formulario" (ngSubmit)="publicar()">
             <div class="modal-body">
-                <form [formGroup]="formulario" (ngSubmit)="publicar()">
-                    <div class="modal-body">
-                        <input type="text" placeholder="Título da publicação" class="form-control" formControlName="titulo">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary"
-                            (click)="activeModal.dismiss('Close clicked')">Fechar</button>
-                        <button type="submit" class="btn btn-primary">Publicar</button>
-                    </div>
-                </form>
+                <input type="file" class="form-control" accept="image/*" (change)="preparatImagemUpload($event)">
+                <br>
+                <input type="text" placeholder="Título da publicação" class="form-control" formControlName="titulo">
             </div>
-            
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                    (click)="activeModal.dismiss('Close clicked')">Fechar</button>
+                <button type="submit" class="btn btn-primary">Publicar</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="modal-body" *ngIf="progressoPublicacao === 'andamento'">
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" [style.width]="porcentagemUpload + '%'"
+                aria-valuenow="porcentagemUpload" aria-valuemin="0" aria-valuemax="100">{{porcentagemUpload}} %</div>
+        </div>
+    </div>
+
+    <div class="modal-body" *ngIf="progressoPublicacao === 'concluido'">
+        <div class="alert alert-success" role="alert">
+            Publicação concluída com sucesso!
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary"
+                (click)="activeModal.dismiss('Close clicked')">Fechar</button>
+        </div>
+    </div>
+
+
 </div>
 
 
